--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="purples">#7259CA</color>
     <color name="purples1">#B699E0</color>
+    <color name="yesil"> #4CAF50 </color>
 </resources>
